--- a/UAS/berita/haji/haji.html
+++ b/UAS/berita/haji/haji.html
@@ -25,13 +25,11 @@
 <div id="nav">
   <ul>
     <li><a href="../../index.html">Beranda</a></li>
-    <li><a href="#">Trending</a></li>
-    <li><a href="#">Kuliner</a></li>
-    <li><a href="#">Internasional</a></li>
-    <li><a href="#">Politik</a></li>
-    <li><a href="#">Hiburan</a></li>
-    <li><a href="#">Olahraga</a></li>
-    <li><a href="#">Sains &amp; Teknologi</a></li>
+    <li><a href="../../nav/trending.html">Trending</a></li>
+    <li><a href="../../nav/kuliner.html">Kuliner</a></li>
+    <li><a href="../../nav/internasional.html">Internasional</a></li>
+    <li><a href="../../nav/politik.html">Politik</a></li>
+    <li><a href="../../nav/olahraga.html">Olahraga</a></li>
   </ul>
 </div>
 <br>
@@ -40,7 +38,7 @@
     <p>
       <p>
         <img width="1000px" src="../../img/haji.jpg"/>
-        <p style="margin-top: 20px;">Yeb | <span>23.06.23</span></p>
+        <p style="margin-top: 20px;">Adi | <span>23.06.23</span></p>
 
         <p style="width: 1000px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 15px;">MEKKAH, JambiTerkini.com - Permintaan obat jemaah haji di Mekkah cukup tinggi. Setiap hari, layanan kesehatan jemaah haji di Mekkah mengeluarkan 500 resep per hari. "Info dari Mekkah cukup besar layanan orang sakit. Kalau saya enggak salah, 500 resep per hari yang dilayani oleh Depo Mekkah," ujar Kasi Kesehatan Daker Madinah, Thafsin Al Farizi seusai menghadiri pertemuan dengan Timwas Haji DPR, Kamis (22/6/2023). Thafsin menegaskan, untuk mengatasi kekurangan obat-obatan pihaknya memiliki dana emergency yang bisa digunakan. Ia tidak mengatahui berapa besar dana emergency yang disiapkan tersebut.</p>
 
