--- a/UAS/index.html
+++ b/UAS/index.html
@@ -25,13 +25,11 @@
 <div id="nav">
   <ul>
     <li><a href="#">Beranda</a></li>
-    <li><a href="#">Trending</a></li>
-    <li><a href="#">Kuliner</a></li>
-    <li><a href="#">Internasional</a></li>
-    <li><a href="#">Politik</a></li>
-    <li><a href="#">Hiburan</a></li>
-    <li><a href="#">Olahraga</a></li>
-    <li><a href="#">Sains &amp; Teknologi</a></li>
+    <li><a href="nav/trending.html">Trending</a></li>
+    <li><a href="nav/kuliner.html">Kuliner</a></li>
+    <li><a href="nav/internasional.html">Internasional</a></li>
+    <li><a href="nav/politik.html">Politik</a></li>
+    <li><a href="nav/olahraga.html">Olahraga</a></li>
   </ul>
 </div>
 <br>
@@ -45,7 +43,7 @@
         <p class="author">Irawan | <span>23.06.23</span></p>
         <p>Jelang hari raya Idul Adha 1444 Hijriah / 2023 Masehi, penjualan sapi kurban di Kuala Tungkal naik. Peningkatan penjualan hewan kurban capai 50 persen dibandingkan tahun lalu.</p>
         <p><a href="berita/sapi/sapi.html">Selengkapnya &raquo;</a></p>
-        <h2 class="heading">Latest Video</h2>
+        <h2 class="heading">Video Terbaru</h2>
         <object width="400" height="300">
           <iframe width="400" height="400" src="https://www.youtube.com/embed/Htn-ZMEXngA" title="Kronologis Kejadian Siswa Digorok Akibat Rebutan Pacar | AKIP tvOne" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </object> 
