--- a/UAS/berita/sapi/sapi.html
+++ b/UAS/berita/sapi/sapi.html
@@ -23,15 +23,13 @@
 </div>
 
 <div id="nav">
-  <ul>
+<ul>
     <li><a href="../../index.html">Beranda</a></li>
-    <li><a href="#">Trending</a></li>
-    <li><a href="#">Kuliner</a></li>
-    <li><a href="#">Internasional</a></li>
-    <li><a href="#">Politik</a></li>
-    <li><a href="#">Hiburan</a></li>
-    <li><a href="#">Olahraga</a></li>
-    <li><a href="#">Sains &amp; Teknologi</a></li>
+    <li><a href="../../nav/trending.html">Trending</a></li>
+    <li><a href="../../nav/kuliner.html">Kuliner</a></li>
+    <li><a href="../../nav/internasional.html">Internasional</a></li>
+    <li><a href="../../nav/politik.html">Politik</a></li>
+    <li><a href="../../nav/olahraga.html">Olahraga</a></li>
   </ul>
 </div>
 <br>
